--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopify-theme-for-sale",
+  "name": "minimal-theme",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
